[gd_scene load_steps=3 format=3 uid="uid://c8ndj7bvsf8pv"]

[ext_resource type="Script" uid="uid://d4g3d4l77qnq7" path="res://addons/revelab_base_kit/title/title.gd" id="1_8exur"]
[ext_resource type="PackedScene" uid="uid://bclfk72fg3iai" path="res://addons/revelab_base_kit/save_load_ui/save_load_dialogues/load_game_dlg.tscn" id="2_gcri8"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8exur")
main_scene = "uid://cjwtes1a3ykua"

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Image_host" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 29.0
offset_top = -619.0
offset_right = 369.0
offset_bottom = -279.0
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="picture" type="TextureRect" parent="Image_host"]
unique_name_in_owner = true
layout_mode = 2

[node name="LoadGameDlg" parent="." instance=ExtResource("2_gcri8")]
visible = false
theme = null

[node name="Menu" type="MarginContainer" parent="."]
z_index = 500
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1130.0
offset_top = -163.0
offset_right = -209.0
offset_bottom = -7.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Button_container" type="HBoxContainer" parent="Menu"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="new_game" type="Button" parent="Menu/Button_container"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_constants/h_separation = 10
theme_override_font_sizes/font_size = 50
text = "New Game"

[node name="continue_game" type="Button" parent="Menu/Button_container"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 50
text = "Continue"

[node name="option" type="Button" parent="Menu/Button_container"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 50
text = "reset game"

[node name="exit" type="Button" parent="Menu/Button_container"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 50
text = "Exit"

[connection signal="pressed" from="Menu/Button_container/new_game" to="." method="_on_NewGameBtn_pressed"]
[connection signal="pressed" from="Menu/Button_container/continue_game" to="." method="_on_ContinueGameBtn_pressed"]
[connection signal="pressed" from="Menu/Button_container/option" to="." method="_on_OptionBtn_pressed"]
[connection signal="pressed" from="Menu/Button_container/exit" to="." method="_on_ExitBtn_pressed"]
